--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Botão WhatsApp mobile -->
     <li>
       <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
-        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
+        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
     </li>
   </ul>
 </nav>
@@ -164,5 +164,6 @@
 
 </body>
 </html>
+
 
 
