--- a/eventos.html
+++ b/eventos.html
@@ -46,8 +46,8 @@
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
     <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
     <li>
-      <a href="https://wa.me/244923281469" target="_blank">
-        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
+    <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
+        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
     </li>
   </ul>
 </nav>
@@ -121,4 +121,5 @@
 
 </body>
 </html>
+
 
