--- a/encomendas.html
+++ b/encomendas.html
@@ -24,9 +24,9 @@
     <button class="menu-toggle">Opções ☰</button>
     <ul class="nav-links">
       <li><a href="menu.html">Menu</a></li>
+      <li><a href="encomendas.html" class="active">Encomendas</a></li>
       <li><a href="eventos.html">Eventos</a></li>
       <li><a href="contactos.html">Contactos</a></li>
-      <li><a href="encomendas.html" class="active">Encomendas</a></li>
       <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
       <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
       <li>
@@ -38,9 +38,9 @@
     </ul>
     <ul class="mobile-menu">
       <li><a href="menu.html">Menu</a></li>
+      <li><a href="encomendas.html" class="active">Encomendas</a></li>
       <li><a href="eventos.html">Eventos</a></li>
       <li><a href="contactos.html">Contactos</a></li>
-      <li><a href="encomendas.html" class="active">Encomendas</a></li>
       <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
       <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
       <li>
@@ -64,7 +64,7 @@
         <p id="total">Total: 0,00 KZ</p>
       </div>
 
-      <!-- Formulário -->
+      <!-- Formulário alinhado -->
       <form id="form-encomenda">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" required>
@@ -90,23 +90,8 @@
 
   <!-- Script -->
   <script>
-    let carrinho = [];
+    let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
 
-    // Adicionar item ao carrinho
-    function adicionarItem(id, nome, preco, sugestaoId) {
-      const existente = carrinho.find(item => item.id === id);
-      if (existente) {
-        existente.qtd += 1;
-      } else {
-        carrinho.push({ id, nome, preco, qtd: 1 });
-      }
-      atualizarCarrinho();
-      if (sugestaoId) {
-        document.getElementById(sugestaoId).innerHTML = nome + " adicionado!";
-      }
-    }
-
-    // Atualizar carrinho
     function atualizarCarrinho() {
       const lista = document.getElementById('lista-carrinho');
       const totalEl = document.getElementById('total');
@@ -115,49 +100,37 @@
 
       carrinho.forEach(item => {
         const li = document.createElement('li');
-
-        const info = document.createElement('span');
-        info.className = 'item-info';
-        info.textContent = `${item.nome} — ${item.preco.toLocaleString('pt-AO')} KZ x ${item.qtd}`;
-
-        const actions = document.createElement('div');
-        actions.className = 'item-actions';
-
-        const btnMais = document.createElement('button');
-        btnMais.textContent = '+';
-        btnMais.onclick = () => { item.qtd++; atualizarCarrinho(); };
-
-        const btnMenos = document.createElement('button');
-        btnMenos.textContent = '-';
-        btnMenos.onclick = () => {
-          if (item.qtd > 1) {
-            item.qtd--;
-          } else {
-            carrinho = carrinho.filter(i => i.id !== item.id);
-          }
-          atualizarCarrinho();
-        };
-
-        const btnRemover = document.createElement('button');
-        btnRemover.textContent = 'x';
-        btnRemover.onclick = () => {
-          carrinho = carrinho.filter(i => i.id !== item.id);
-          atualizarCarrinho();
-        };
-
-        actions.appendChild(btnMais);
-        actions.appendChild(btnMenos);
-        actions.appendChild(btnRemover);
-
-        li.appendChild(info);
-        li.appendChild(actions);
+        li.innerHTML = `
+          <span class="item-info">${item.nome} — ${item.preco.toLocaleString('pt-AO')} KZ x ${item.qtd}</span>
+          <div class="item-actions">
+            <button onclick="alterarQtd('${item.id}', 1)">+</button>
+            <button onclick="alterarQtd('${item.id}', -1)">-</button>
+            <button onclick="removerItem('${item.id}')">x</button>
+          </div>
+        `;
         lista.appendChild(li);
-
         total += item.preco * item.qtd;
       });
 
       totalEl.textContent = "Total: " + total.toLocaleString('pt-AO') + " KZ";
     }
+
+    function alterarQtd(id, delta) {
+      const item = carrinho.find(i => i.id === id);
+      if (!item) return;
+      item.qtd += delta;
+      if (item.qtd <= 0) carrinho = carrinho.filter(i => i.id !== id);
+      localStorage.setItem('carrinho', JSON.stringify(carrinho));
+      atualizarCarrinho();
+    }
+
+    function removerItem(id) {
+      carrinho = carrinho.filter(i => i.id !== id);
+      localStorage.setItem('carrinho', JSON.stringify(carrinho));
+      atualizarCarrinho();
+    }
+
+    atualizarCarrinho();
 
     // Finalizar encomenda → WhatsApp + reset + index
     const form = document.getElementById('form-encomenda');
@@ -177,6 +150,7 @@
       window.open(url, "_blank");
 
       carrinho = [];
+      localStorage.removeItem('carrinho');
       atualizarCarrinho();
       window.location.href = "index.html";
     });
