--- a/menu.html
+++ b/menu.html
@@ -1603,7 +1603,22 @@
       window.location.href = "index.html";
     });
   }
+
+	function adicionarItem(id, nome, preco, sugestaoId) {
+  let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+  const existente = carrinho.find(item => item.id === id);
+  if (existente) {
+    existente.qtd += 1;
+  } else {
+    carrinho.push({ id, nome, preco, qtd: 1 });
+  }
+  localStorage.setItem('carrinho', JSON.stringify(carrinho));
+  if (sugestaoId) {
+    document.getElementById(sugestaoId).innerHTML = nome + " adicionado!";
+  }
+}
 </script>
 
 </body>
 </html>
+
