--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,7 @@
 
 
 <!-- Barra de navegação -->
+<!-- Barra de navegação -->
 <nav class="navbar">
   <!-- Logo -->
   <div class="logo">
@@ -21,7 +22,7 @@
     </a>
   </div>
 
-  <!-- Filtro integrado na NAV -->
+  <!-- Filtro -->
   <div class="filtro filtro-nav">
     <label for="categoria">Filtrar:</label>
     <select id="categoria">
@@ -50,7 +51,7 @@
     <button id="limpar-filtro" class="btn-filtro">Limpar</button>
   </div>
 
-  <!-- Botão Opções dentro da NAV -->
+  <!-- Botão Opções -->
   <button class="menu-toggle">Opções ☰</button>
 
   <!-- Links desktop -->
@@ -1601,6 +1602,7 @@
 
 </body>
 </html>
+
 
 
 
