--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,7 @@
 
 <!-- Barra de navegação -->
 <!-- Barra de navegação -->
+<!-- Barra de navegação -->
 <nav class="navbar">
   <!-- Logo -->
   <div class="logo">
@@ -22,7 +23,7 @@
     </a>
   </div>
 
-  <!-- Filtro -->
+  <!-- Filtro + botão Limpar -->
   <div class="filtro filtro-nav">
     <label for="categoria">Filtrar:</label>
     <select id="categoria">
@@ -70,6 +71,22 @@
     </li>
   </ul>
 </nav>
+
+<!-- Menu mobile (abre ao clicar em Opções ☰) -->
+<ul class="mobile-menu">
+  <li><a href="menu.html" class="active">Menu</a></li>
+  <li><a href="encomendas.html">Encomendas</a></li>
+  <li><a href="eventos.html">Eventos</a></li>
+  <li><a href="contactos.html">Contactos</a></li>
+  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
+  <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+  <li>
+    <a href="https://wa.me/244923281469" target="_blank">
+      <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
+      Posso ajudar?
+    </a>
+  </li>
+</ul>
 
 <!-- Filtro fora do menu (mobile) -->
 <div class="filtro filtro-mobile">
@@ -1602,6 +1619,7 @@
 
 </body>
 </html>
+
 
 
 
