--- a/menu.html
+++ b/menu.html
@@ -12,8 +12,7 @@
 <body>
 
 
-<!-- Barra de navegação -->
-<!-- Barra de navegação -->
+
 <!-- Barra de navegação -->
 <nav class="navbar">
   <!-- Logo -->
@@ -70,6 +69,23 @@
       </a>
     </li>
   </ul>
+</nav>
+
+<!-- Menu mobile (abre ao clicar em Opções ☰) -->
+<ul class="mobile-menu">
+  <li><a href="menu.html" class="active">Menu</a></li>
+  <li><a href="encomendas.html">Encomendas</a></li>
+  <li><a href="eventos.html">Eventos</a></li>
+  <li><a href="contactos.html">Contactos</a></li>
+  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
+  <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+  <li>
+    <a href="https://wa.me/244923281469" target="_blank">
+      <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
+      Posso ajudar?
+    </a>
+  </li>
+</ul>
 </nav>
 
 <!-- Menu mobile (abre ao clicar em Opções ☰) -->
@@ -1634,6 +1650,7 @@
 
 </body>
 </html>
+
 
 
 
