--- a/menu.html
+++ b/menu.html
@@ -3,59 +3,188 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menu | GEP Restaurante</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Favicon (logo da GEP) -->
-  <link rel="icon" type="image/png" href="imagens/gep.logo.jpg">
+  <title>Menu - GEP Restaurante</title>
+  <style>
+    /* ===== CSS exclusivo do menu ===== */
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #111;
+      color: #fff;
+      padding-top: 65px;
+    }
 
+    .navbar {
+      background: #FFD700;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      padding: 10px 15px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .logo img {
+      height: 40px;
+    }
+
+    .filtro-nav {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      flex: 1;
+      min-width: 160px;
+    }
+
+    .filtro-nav label {
+      color: #111;
+      font-weight: bold;
+    }
+
+    .filtro-nav select {
+      flex: 1;
+      min-width: 100px;
+      padding: 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .btn-filtro {
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      background: linear-gradient(135deg, #FFD700, #FF4C4C);
+      color: #111;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .menu-toggle {
+      background: linear-gradient(135deg, #FFD700, #FF4C4C);
+      color: #111;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 3px 8px rgba(255, 215, 0, 0.4);
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin-left: auto;
+    }
+
+    .nav-links li a {
+      text-decoration: none;
+      color: #111;
+      font-weight: bold;
+    }
+
+    /* Mobile */
+    @media (max-width: 768px) {
+      .nav-links { display: none; }
+      .navbar {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 8px;
+      }
+      .logo { flex: 0 0 auto; }
+      .filtro-nav { flex: 1; }
+      .menu-toggle { flex: 0 0 auto; }
+    }
+
+    .mobile-menu {
+      display: none;
+      flex-direction: column;
+      gap: 15px;
+      background: #111;
+      padding: 15px;
+      position: absolute;
+      top: 65px;
+      left: 0;
+      width: 100%;
+      z-index: 999;
+    }
+
+    .mobile-menu li a {
+      display: block;
+      padding: 10px;
+      background: linear-gradient(135deg, #FFD700, #FF4C4C);
+      color: #111;
+      border-radius: 6px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
+  <!-- Barra de navegação -->
+  <nav class="navbar">
+    <!-- Logo -->
+    <div class="logo">
+      <a href="index.html">
+        <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
+      </a>
+    </div>
 
+    <!-- Filtro + botão Limpar -->
+    <div class="filtro filtro-nav">
+      <label for="categoria">Filtrar:</label>
+      <select id="categoria">
+        <option value="todos">Todos</option>
+        <option value="entradas">Entradas e Petiscos</option>
+        <option value="pequeno-almoco">Pequeno Almoço</option>
+        <option value="carnes">Pratos Carnes</option>
+        <option value="massas">Massas Diverso</option>
+        <option value="bebidas">Bebidas</option>
+        <option value="cervejas">Cervejas Diversas</option>
+        <option value="cocktails">Cocktails</option>
+        <option value="cafe">Café</option>
+        <option value="champanhe">Champanhe</option>
+        <option value="whiskey-velho">Whiskey Velho Dose</option>
+        <option value="whiskey-novo">Whiskey Novo</option>
+        <option value="vinho-tinto">Vinho Tinto</option>
+        <option value="vinho-branco">Vinho Branco Verde</option>
+        <option value="vinho-rose">Vinho Rosé</option>
+        <option value="licores">Licores</option>
+        <option value="cognacs">Cognacs</option>
+        <option value="shots">Shots</option>
+        <option value="sangrias">Sangrias Diversas</option>
+        <option value="vodka-gin">Vodka & Gin</option>
+        <option value="aguardente">Aguardente</option>
+      </select>
+      <button id="limpar-filtro" class="btn-filtro">Limpar</button>
+    </div>
 
-<!-- Barra de navegação -->
-<nav class="navbar">
-  <!-- Logo -->
-  <div class="logo">
-    <a href="index.html">
-      <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
-    </a>
-  </div>
+    <!-- Botão Opções -->
+    <button class="menu-toggle">Opções ☰</button>
 
-  <!-- Filtro + botão Limpar -->
-  <div class="filtro filtro-nav">
-    <label for="categoria">Filtrar:</label>
-    <select id="categoria">
-      <option value="todos">Todos</option>
-      <option value="entradas">Entradas e Petiscos</option>
-      <option value="pequeno-almoco">Pequeno Almoço</option>
-      <option value="carnes">Pratos Carnes</option>
-      <option value="massas">Massas Diverso</option>
-      <option value="bebidas">Bebidas</option>
-      <option value="cervejas">Cervejas Diversas</option>
-      <option value="cocktails">Cocktails</option>
-      <option value="cafe">Café</option>
-      <option value="champanhe">Champanhe</option>
-      <option value="whiskey-velho">Whiskey Velho Dose</option>
-      <option value="whiskey-novo">Whiskey Novo</option>
-      <option value="vinho-tinto">Vinho Tinto</option>
-      <option value="vinho-branco">Vinho Branco Verde</option>
-      <option value="vinho-rose">Vinho Rosé</option>
-      <option value="licores">Licores</option>
-      <option value="cognacs">Cognacs</option>
-      <option value="shots">Shots</option>
-      <option value="sangrias">Sangrias Diversas</option>
-      <option value="vodka-gin">Vodka & Gin</option>
-      <option value="aguardente">Aguardente</option>
-    </select>
-    <button id="limpar-filtro" class="btn-filtro">Limpar</button>
-  </div>
+    <!-- Links desktop -->
+    <ul class="nav-links">
+      <li><a href="menu.html" class="active">Menu</a></li>
+      <li><a href="encomendas.html">Encomendas</a></li>
+      <li><a href="eventos.html">Eventos</a></li>
+      <li><a href="contactos.html">Contactos</a></li>
+      <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+      <li>
+        <a href="https://wa.me/244923281469" target="_blank">
+          <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
+          Posso ajudar?
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-  <!-- Botão Opções -->
-  <button class="menu-toggle">Opções ☰</button>
-
-  <!-- Links desktop -->
-  <ul class="nav-links">
+  <!-- Menu mobile -->
+  <ul class="mobile-menu">
     <li><a href="menu.html" class="active">Menu</a></li>
     <li><a href="encomendas.html">Encomendas</a></li>
     <li><a href="eventos.html">Eventos</a></li>
@@ -69,69 +198,7 @@
       </a>
     </li>
   </ul>
-</nav>
 
-<!-- Menu mobile (abre ao clicar em Opções ☰) -->
-<ul class="mobile-menu">
-  <li><a href="menu.html" class="active">Menu</a></li>
-  <li><a href="encomendas.html">Encomendas</a></li>
-  <li><a href="eventos.html">Eventos</a></li>
-  <li><a href="contactos.html">Contactos</a></li>
-  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
-  <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
-  <li>
-    <a href="https://wa.me/244923281469" target="_blank">
-      <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
-      Posso ajudar?
-    </a>
-  </li>
-</ul>
-</nav>
-
-<!-- Menu mobile (abre ao clicar em Opções ☰) -->
-<ul class="mobile-menu">
-  <li><a href="menu.html" class="active">Menu</a></li>
-  <li><a href="encomendas.html">Encomendas</a></li>
-  <li><a href="eventos.html">Eventos</a></li>
-  <li><a href="contactos.html">Contactos</a></li>
-  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
-  <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
-  <li>
-    <a href="https://wa.me/244923281469" target="_blank">
-      <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
-      Posso ajudar?
-    </a>
-  </li>
-</ul>
-
-<!-- Filtro fora do menu (mobile) -->
-<div class="filtro filtro-mobile">
-  <label for="categoria-mobile">Filtrar:</label>
-  <select id="categoria-mobile">
-    <option value="todos">Todos</option>
-    <option value="entradas">Entradas e Petiscos</option>
-    <option value="pequeno-almoco">Pequeno Almoço</option>
-    <option value="carnes">Pratos Carnes</option>
-    <option value="massas">Massas Diverso</option>
-    <option value="bebidas">Bebidas</option>
-    <option value="cervejas">Cervejas Diversas</option>
-    <option value="cocktails">Cocktails</option>
-    <option value="cafe">Café</option>
-    <option value="champanhe">Champanhe</option>
-    <option value="whiskey-velho">Whiskey Velho Dose</option>
-    <option value="whiskey-novo">Whiskey Novo</option>
-    <option value="vinho-tinto">Vinho Tinto</option>
-    <option value="vinho-branco">Vinho Branco Verde</option>
-    <option value="vinho-rose">Vinho Rosé</option>
-    <option value="licores">Licores</option>
-    <option value="cognacs">Cognacs</option>
-    <option value="shots">Shots</option>
-    <option value="sangrias">Sangrias Diversas</option>
-    <option value="vodka-gin">Vodka & Gin</option>
-    <option value="aguardente">Aguardente</option>
-  </select>
-  <button id="limpar-filtro-mobile" class="btn-filtro">Limpar</button>
-</div>
 
   <!-- Conteúdo Menu -->
 <main class="conteudo-principal">
@@ -1650,6 +1717,7 @@
 
 </body>
 </html>
+
 
 
 
