--- a/menu.html
+++ b/menu.html
@@ -207,7 +207,7 @@
   
   <div class="product" data-categoria="entradas">
     <img src="imagens/gambas-panados.jpg" alt="Gambas Panados">
-    <h3>Gambas Panados</h3>
+    <h3>Gambas Panados-</h3>
     <div class="price" data-preco="14290">14.290,00 KZ</div>
     <button onclick="adicionarItem('e001','Gambas Panados',14290,'sug001')">Adicionar</button>
     <div class="sugestao" id="sug001"></div>
@@ -1708,6 +1708,7 @@
 
 </body>
 </html>
+
 
 
 
