--- a/menu.html
+++ b/menu.html
@@ -2,10 +2,9 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu - GEP Restaurante</title>
   <style>
-    /* ===== CSS exclusivo do menu ===== */
+    /* CSS exclusivo do menu */
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
@@ -19,7 +18,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      flex-wrap: nowrap; /* mantém em linha */
+      flex-wrap: nowrap;
       padding: 10px 15px;
       position: fixed;
       top: 0;
@@ -30,116 +29,71 @@
 
     .logo img { height: 40px; }
 
-    .filtro-nav {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      flex: 1;
-      min-width: 160px;
-    }
-
-    .filtro-nav label { color: #111; font-weight: bold; }
-
-    .filtro-nav select {
-      flex: 1;
-      min-width: 100px;
-      padding: 6px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
+    .filtro-nav { display:flex; align-items:center; gap:6px; flex:1; min-width:160px; }
+    .filtro-nav label { color:#111; font-weight:bold; }
+    .filtro-nav select { flex:1; min-width:100px; padding:6px; border:1px solid #ccc; border-radius:4px; }
 
     .btn-filtro {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      background: linear-gradient(135deg, #FFD700, #FF4C4C);
-      color: #111;
-      font-weight: bold;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 3px 8px rgba(255, 215, 0, 0.4);
+      padding:6px 12px;
+      border:none;
+      border-radius:4px;
+      background:linear-gradient(135deg,#FFD700,#FF4C4C);
+      color:#111;
+      font-weight:bold;
+      cursor:pointer;
+      box-shadow:0 3px 8px rgba(255,215,0,0.4);
+      transition:all 0.3s ease;
     }
-
-    .btn-filtro:hover {
-      background: linear-gradient(135deg, #FF4C4C, #007BFF);
-      color: #fff;
-      transform: scale(1.05);
-    }
+    .btn-filtro:hover { background:linear-gradient(135deg,#FF4C4C,#007BFF); color:#fff; transform:scale(1.05); }
 
     .menu-toggle {
-      background: linear-gradient(135deg, #FFD700, #FF4C4C);
-      color: #111;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 3px 8px rgba(255, 215, 0, 0.4);
-      transition: all 0.3s ease;
+      background:linear-gradient(135deg,#FFD700,#FF4C4C);
+      color:#111;
+      border:none;
+      padding:8px 14px;
+      border-radius:6px;
+      font-weight:bold;
+      cursor:pointer;
+      box-shadow:0 3px 8px rgba(255,215,0,0.4);
+      transition:all 0.3s ease;
     }
+    .menu-toggle:hover { background:linear-gradient(135deg,#FF4C4C,#007BFF); color:#fff; transform:scale(1.05); }
 
-    .menu-toggle:hover {
-      background: linear-gradient(135deg, #FF4C4C, #007BFF);
-      color: #fff;
-      transform: scale(1.05);
-    }
+    .nav-links { list-style:none; display:flex; gap:20px; margin-left:auto; }
+    .nav-links li a { text-decoration:none; color:#111; font-weight:bold; transition:color 0.3s; }
+    .nav-links li a:hover { color:#FF4C4C; }
 
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin-left: auto;
-    }
-
-    .nav-links li a {
-      text-decoration: none;
-      color: #111;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    .nav-links li a:hover {
-      color: #FF4C4C;
-    }
-
-    /* Mobile */
-    @media (max-width: 768px) {
-      .nav-links { display: none; }
-      .navbar { gap: 8px; flex-wrap: nowrap; }
-      .logo { flex: 0 0 auto; }
-      .filtro-nav { flex: 1; min-width: 0; }
-      .menu-toggle { flex: 0 0 auto; display: block; }
+    @media(max-width:768px){
+      .nav-links{display:none;}
+      .navbar{gap:8px; flex-wrap:nowrap;}
+      .logo{flex:0 0 auto;}
+      .filtro-nav{flex:1; min-width:0;}
+      .menu-toggle{flex:0 0 auto; display:block;}
     }
 
     .mobile-menu {
-      display: none;
-      flex-direction: column;
-      gap: 15px;
-      background: #111;
-      padding: 15px;
-      position: absolute;
-      top: 65px;
-      left: 0;
-      width: 100%;
-      z-index: 999;
+      display:none;
+      flex-direction:column;
+      gap:15px;
+      background:#111;
+      padding:15px;
+      position:absolute;
+      top:65px;
+      left:0;
+      width:100%;
+      z-index:999;
     }
-
     .mobile-menu li a {
-      display: block;
-      padding: 10px;
-      background: linear-gradient(135deg, #FFD700, #FF4C4C);
-      color: #111;
-      border-radius: 6px;
-      text-align: center;
-      box-shadow: 0 3px 8px rgba(255, 215, 0, 0.4);
-      transition: all 0.3s ease;
+      display:block;
+      padding:10px;
+      background:linear-gradient(135deg,#FFD700,#FF4C4C);
+      color:#111;
+      border-radius:6px;
+      text-align:center;
+      box-shadow:0 3px 8px rgba(255,215,0,0.4);
+      transition:all 0.3s ease;
     }
-
-    .mobile-menu li a:hover {
-      background: linear-gradient(135deg, #FF4C4C, #007BFF);
-      color: #fff;
-      transform: scale(1.05);
-    }
+    .mobile-menu li a:hover { background:linear-gradient(135deg,#FF4C4C,#007BFF); color:#fff; transform:scale(1.05); }
   </style>
 </head>
 <body>
@@ -1728,6 +1682,7 @@
 
 </body>
 </html>
+
 
 
 
