--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
   <!-- Links desktop -->
   <ul class="nav-links">
-    <li><a href="menu.html">Menu</a></li>
-	 <li><a href="encomendas.html">Encomendas</a></li>
+    <li><a href="cardapio.html">Cardápio</a></li>
+	 <li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
     <li><a href="contactos.html">Contactos</a></li>   
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
@@ -43,8 +43,8 @@
 
   <!-- Menu mobile -->
   <ul class="mobile-menu">
-    <li><a href="menu.html">Menu</a></li>
-	<li><a href="encomendas.html">Encomendas</a></li>
+    <li><a href="cardapio.html">Cardápio</a></li>
+	<li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
     <li><a href="contactos.html">Contactos</a></li>    
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
@@ -164,6 +164,7 @@
 
 </body>
 </html>
+
 
 
 
